fix: adjust layout of chat input to improve emoji input styling and alignment

--- a/clint/src/Components/ChatRight/ChatRight.css
+++ b/clint/src/Components/ChatRight/ChatRight.css
@@ -66,6 +66,11 @@
     display: flex;
     height: 10%;
     align-items: center;
+    justify-content: space-between;
+}
+
+.chat-input-emoji{
+    width: 95%;
 }
 
 .send-message-container>button{
